WIP: LocalServer multi-node integration tests
Refactored integration tests from MTLS to LocalServer:
- Removed DynamicPortAllocator and TestCertificateGenerator (MTLS infrastructure)
- Updated TestClusterBuilder to use LocalServer with shared prefix pattern
- Updated MultiNodeIntegrationTest to use LocalServer endpoints
- Created FirefliesClusterTest (direct E2ETest copy with 12 nodes)
- Created SimpleFirefliesTest (simplified 6-node test)
- Created TestClusterBuilderTest (6-node test using TestClusterBuilder)

Current Issue:
- Single-node tests: GREEN (3/3 pass)
- Multi-node tests: All fail with same symptoms
  - Kernel node bootstraps successfully
  - Other nodes timeout during join (never show 'Installed view')
  - activeCount remains 0-1 instead of expected cardinality
  - Member discovery works (nodes know all IDs) but activation fails

Hypothesis: LocalServer routing model mismatch - Views may be trying
to connect to network endpoints when LocalServer does in-process routing.

Needs IDE debugging to investigate Fireflies cluster join sequence.